--- a/styles.css
+++ b/styles.css
@@ -27,7 +27,7 @@ body {
 }
 
 
-/*Min bild på mitt ansikte */
+/*Min bild på mitt ansikte lol */
 header{
   background: #e08f8f;
   background-image: url('Bild.101.jpg');
